Finish Editor v1 (#17)
* feat: add grammar submission

* feat: add reading editor

* feat: user register

* feat(auth): change to token based auth

* test(auth): add unit test for token based auth

* feat(auth): partially switch to token-based auth in frontend

* feat(auth): fully token-based auth frontend

* feat: enable searching in editor page

* feat: enable editing in frontend

* feat: finish word editor.

* feat: add a pull-down list to select search type in searching page

* feat: search for grammars and readings

* feat: finish editor v1
