# backend/docs/swagger.yaml
@@ -142,6 +142,13 @@ definitions:
       message:
         type: string
     type: object
+  models.TokenResponse:
+    properties:
+      expires_in:
+        type: integer
+      token:
+        type: string
+    type: object
   models.UserGrammar:
     properties:
       description:
@@ -213,6 +220,31 @@ info:
   title: Easy Japanese API
   version: "0.1"
 paths:
+  /api/auth/token:
+    post:
+      consumes:
+      - application/json
+      description: Exchange API key for a JWT token
+      parameters:
+      - description: API Key
+        in: header
+        name: X-API-Key
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.TokenResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/models.ErrorMsg'
+      summary: Get authentication token
+      tags:
+      - auth
   /api/grammar/add:
     post:
       consumes:
@@ -233,7 +265,7 @@ paths:
           schema:
             $ref: '#/definitions/models.ErrorMsg'
       security:
-      - APIKeyAuth: []
+      - JWTAuth: []
       summary: Add grammar
       tags:
       - globalDictOp
@@ -261,7 +293,7 @@ paths:
           schema:
             $ref: '#/definitions/models.ErrorMsg'
       security:
-      - APIKeyAuth: []
+      - JWTAuth: []
       summary: Delete grammar
       tags:
       - globalDictOp
@@ -289,7 +321,7 @@ paths:
           schema:
             $ref: '#/definitions/models.ErrorMsg'
       security:
-      - APIKeyAuth: []
+      - JWTAuth: []
       summary: Edit grammar
       tags:
       - globalDictOp
@@ -318,7 +350,7 @@ paths:
           schema:
             $ref: '#/definitions/models.ErrorMsg'
       security:
-      - APIKeyAuth: []
+      - JWTAuth: []
       summary: Browse all grammars
       tags:
       - globalDictOp
@@ -350,7 +382,7 @@ paths:
           schema:
             $ref: '#/definitions/models.ErrorMsg'
       security:
-      - APIKeyAuth: []
+      - JWTAuth: []
       summary: Search among all grammars
       tags:
       - globalDictOp
@@ -387,7 +419,7 @@ paths:
           schema:
             $ref: '#/definitions/models.ErrorMsg'
       security:
-      - APIKeyAuth: []
+      - JWTAuth: []
       summary: Add reading material
       tags:
       - globalDictOp
@@ -411,7 +443,7 @@ paths:
           schema:
             $ref: '#/definitions/models.ErrorMsg'
       security:
-      - APIKeyAuth: []
+      - JWTAuth: []
       summary: Delete reading material
       tags:
       - globalDictOp
@@ -435,7 +467,7 @@ paths:
           schema:
             $ref: '#/definitions/models.ErrorMsg'
       security:
-      - APIKeyAuth: []
+      - JWTAuth: []
       summary: Edit reading material
       tags:
       - globalDictOp
@@ -466,7 +498,7 @@ paths:
           schema:
             $ref: '#/definitions/models.ErrorMsg'
       security:
-      - APIKeyAuth: []
+      - JWTAuth: []
       summary: Browse all reading materials
       tags:
       - globalDictOp
@@ -500,7 +532,7 @@ paths:
           schema:
             $ref: '#/definitions/models.ErrorMsg'
       security:
-      - APIKeyAuth: []
+      - JWTAuth: []
       summary: Fuzzy search in all reading materials
       tags:
       - globalDictOp
@@ -527,7 +559,7 @@ paths:
           schema:
             $ref: '#/definitions/models.ErrorMsg'
       security:
-      - APIKeyAuth: []
+      - JWTAuth: []
       summary: Remove user
       tags:
       - userOp
@@ -555,7 +587,7 @@ paths:
           schema:
             $ref: '#/definitions/models.ErrorMsg'
       security:
-      - APIKeyAuth: []
+      - JWTAuth: []
       summary: Add a grammar to user's dictionary
       tags:
       - userDictOp
@@ -583,7 +615,7 @@ paths:
           schema:
             $ref: '#/definitions/models.ErrorMsg'
       security:
-      - APIKeyAuth: []
+      - JWTAuth: []
       summary: Delete a grammar from user's dictionary
       tags:
       - userDictOp
@@ -611,7 +643,7 @@ paths:
           schema:
             $ref: '#/definitions/models.ErrorMsg'
       security:
-      - APIKeyAuth: []
+      - JWTAuth: []
       summary: Edit a grammar in user's dictionary
       tags:
       - userDictOp
@@ -640,7 +672,7 @@ paths:
           schema:
             $ref: '#/definitions/models.ErrorMsg'
       security:
-      - APIKeyAuth: []
+      - JWTAuth: []
       summary: Browse all grammars in user's dictionary
       tags:
       - userDictOp
@@ -672,7 +704,7 @@ paths:
           schema:
             $ref: '#/definitions/models.ErrorMsg'
       security:
-      - APIKeyAuth: []
+      - JWTAuth: []
       summary: Search among all grammars in user's dictionary
       tags:
       - userDictOp
@@ -700,7 +732,7 @@ paths:
           schema:
             $ref: '#/definitions/models.ErrorMsg'
       security:
-      - APIKeyAuth: []
+      - JWTAuth: []
       summary: Add a reading material to user's dictionary
       tags:
       - userDictOp
@@ -728,7 +760,7 @@ paths:
           schema:
             $ref: '#/definitions/models.ErrorMsg'
       security:
-      - APIKeyAuth: []
+      - JWTAuth: []
       summary: Delete a reading material from user's dictionary
       tags:
       - userDictOp
@@ -756,7 +788,7 @@ paths:
           schema:
             $ref: '#/definitions/models.ErrorMsg'
       security:
-      - APIKeyAuth: []
+      - JWTAuth: []
       summary: Edit a reading material in user's dictionary
       tags:
       - userDictOp
@@ -791,7 +823,7 @@ paths:
           schema:
             $ref: '#/definitions/models.ErrorMsg'
       security:
-      - APIKeyAuth: []
+      - JWTAuth: []
       summary: Browse all reading materials from user's dictionary
       tags:
       - userDictOp
@@ -829,7 +861,7 @@ paths:
           schema:
             $ref: '#/definitions/models.ErrorMsg'
       security:
-      - APIKeyAuth: []
+      - JWTAuth: []
       summary: Fuzzy search in all reading materials from user's dictionary
       tags:
       - userDictOp
@@ -858,7 +890,7 @@ paths:
           schema:
             $ref: '#/definitions/models.ErrorMsg'
       security:
-      - APIKeyAuth: []
+      - JWTAuth: []
       summary: Register user
       tags:
       - userOp
@@ -897,7 +929,7 @@ paths:
           schema:
             $ref: '#/definitions/models.ErrorMsg'
       security:
-      - APIKeyAuth: []
+      - JWTAuth: []
       summary: Get batched words for review
       tags:
       - globalDictOp
@@ -925,7 +957,7 @@ paths:
           schema:
             $ref: '#/definitions/models.ErrorMsg'
       security:
-      - APIKeyAuth: []
+      - JWTAuth: []
       summary: User correctly answer the grammar
       tags:
       - globalDictOp
@@ -953,7 +985,7 @@ paths:
           schema:
             $ref: '#/definitions/models.ErrorMsg'
       security:
-      - APIKeyAuth: []
+      - JWTAuth: []
       summary: User incorrectly answer the grammar
       tags:
       - globalDictOp
@@ -981,7 +1013,7 @@ paths:
           schema:
             $ref: '#/definitions/models.ErrorMsg'
       security:
-      - APIKeyAuth: []
+      - JWTAuth: []
       summary: User correctly answer the word
       tags:
       - globalDictOp
@@ -1009,7 +1041,7 @@ paths:
           schema:
             $ref: '#/definitions/models.ErrorMsg'
       security:
-      - APIKeyAuth: []
+      - JWTAuth: []
       summary: User incorrectly answer the word
       tags:
       - globalDictOp
@@ -1042,7 +1074,7 @@ paths:
           schema:
             $ref: '#/definitions/models.ErrorMsg'
       security:
-      - APIKeyAuth: []
+      - JWTAuth: []
       summary: Change the username
       tags:
       - userOp
@@ -1073,7 +1105,7 @@ paths:
           schema:
             $ref: '#/definitions/models.ErrorMsg'
       security:
-      - APIKeyAuth: []
+      - JWTAuth: []
       summary: Check for similar words in the dictionary for that user
       tags:
       - userDictOp
@@ -1105,7 +1137,7 @@ paths:
           schema:
             $ref: '#/definitions/models.ErrorMsg'
       security:
-      - APIKeyAuth: []
+      - JWTAuth: []
       summary: Insert word into user's dictionary
       tags:
       - userDictOp
@@ -1133,7 +1165,7 @@ paths:
           schema:
             $ref: '#/definitions/models.ErrorMsg'
       security:
-      - APIKeyAuth: []
+      - JWTAuth: []
       summary: Delete a word in user's dictionary
       tags:
       - userDictOp
@@ -1161,7 +1193,7 @@ paths:
           schema:
             $ref: '#/definitions/models.ErrorMsg'
       security:
-      - APIKeyAuth: []
+      - JWTAuth: []
       summary: Edit a word in user's dictionary
       tags:
       - userDictOp
@@ -1191,7 +1223,7 @@ paths:
           schema:
             $ref: '#/definitions/models.ErrorMsg'
       security:
-      - APIKeyAuth: []
+      - JWTAuth: []
       summary: Check (fuzzy search) for similar words in the dictionary for that user
       tags:
       - userDictOp
@@ -1222,7 +1254,7 @@ paths:
           schema:
             $ref: '#/definitions/models.ErrorMsg'
       security:
-      - APIKeyAuth: []
+      - JWTAuth: []
       summary: Browse words in dictionary for that user
       tags:
       - userDictOp
@@ -1255,7 +1287,7 @@ paths:
           schema:
             $ref: '#/definitions/models.ErrorMsg'
       security:
-      - APIKeyAuth: []
+      - JWTAuth: []
       summary: Check for similar words in the dictionary
       tags:
       - globalDictOp
@@ -1289,7 +1321,7 @@ paths:
           schema:
             $ref: '#/definitions/models.ErrorMsg'
       security:
-      - APIKeyAuth: []
+      - JWTAuth: []
       summary: Insert word into dictionary
       tags:
       - globalDictOp
@@ -1323,7 +1355,7 @@ paths:
           schema:
             $ref: '#/definitions/models.ErrorMsg'
       security:
-      - APIKeyAuth: []
+      - JWTAuth: []
       summary: Delete word in dictionary
       tags:
       - globalDictOp
@@ -1357,7 +1389,7 @@ paths:
           schema:
             $ref: '#/definitions/models.ErrorMsg'
       security:
-      - APIKeyAuth: []
+      - JWTAuth: []
       summary: Update word in dictionary
       tags:
       - globalDictOp
@@ -1400,7 +1432,7 @@ paths:
           schema:
             $ref: '#/definitions/models.ErrorMsg'
       security:
-      - APIKeyAuth: []
+      - JWTAuth: []
       summary: Check for similar words (fuzzy) in the dictionary
       tags:
       - globalDictOp
@@ -1436,7 +1468,7 @@ paths:
           schema:
             $ref: '#/definitions/models.ErrorMsg'
       security:
-      - APIKeyAuth: []
+      - JWTAuth: []
       summary: Browse words in dictionary
       tags:
       - globalDictOp
